# ryoe

./: .bunfig.toml  .env.example  .gitignore  DATABASE_HEALTH_COMPONENT.md  MIGRATION_GUIDE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts  web
.githooks/: pre-commit
commands/: build-output.sh  run-tauri.sh  setup-bun-tauri.sh
db/: schema.ts
db/migrations/: 0000_complete_layla_miller.sql  0002_perfect_sersi.sql  0003_loud_thunderbolts.sql  0005_fast_pretty_boy.sql
docs/: BUN_TAURI_SETUP.md  favorites-feature.md  footer-implementation.md  reconnection-fix.md  versioning-system.md  web-desktop-compatibility-fix.md
docs/guide/: README.md  crud-factories.md  queries-and-hooks.md
docs/implementation/: additional-migrations.mdx  api-migration.md  auth.mdx  database.mdx  roadmap.md
public/: manifest.json
scripts/: cleanup-old-files.ts  dev-bun.sh  increment-version.js  migrate-favorites.ts  refactor-codebase.ts  setup-bun-tauri.sh  setup-git-hooks.sh  test-increment.sh  update-imports.ts
src/: main.tsx  test-folder-creation.ts  test-folder-crud.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  port_manager.rs
src/__tests__/: test-folder-crud.ts
src/api/: index.ts  mutation-factory.ts  query-factory.ts  types.ts
src/app/: config.ts  global.css  index.tsx  provider.tsx  router.tsx
src/application/: index.ts
(+405 files in other folders)
